# OrbbecSDK_v2

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LiDAR_README.md  README.md  pytest.ini
.claude/: settings.local.json
cmake/: options.cmake
examples/: CMakeLists.txt  LiDAR_README.md  README.md
examples/advanced/align_modes/: CMakeLists.txt  README.md  align_modes.cpp
examples/advanced/callback/: README.md  callback.cpp
examples/advanced/camera_params/: CMakeLists.txt  README.md  camera_params.cpp
examples/advanced/common_usages/: README.md
examples/advanced/confidence/: README.md  confidence.cpp
examples/advanced/control/: README.md
examples/advanced/coordinate_transform/: README.md
examples/advanced/decimation/: README.md
examples/advanced/forceip/: README.md  forceip.cpp
examples/advanced/hdr/: README.md  hdr.cpp
examples/advanced/hw_d2c_align/: README.md
examples/advanced/infrared_streams/: CMakeLists.txt  README.md  infrared_streams.cpp
examples/advanced/laser_interleave/: README.md  laser_interleave.cpp
examples/advanced/metadata/: README.md  metadata.cpp
examples/advanced/multi_devices/: README.md
examples/advanced/multi_devices_firmware_update/: README.md
examples/advanced/multi_devices_sync/: FramePairingManager.cpp  FramePairingManager.hpp  PipelineHolder.cpp  PipelineHolder.hpp  README.md  ob_multi_devices_sync.cpp
examples/advanced/multi_devices_sync/utils/: cJSON.c  cJSON.h
examples/advanced/multi_devices_sync_gmsltrigger/: README.md  ob_multi_devices_sync_gmsltrigger.cpp
examples/advanced/optional_depth_presets_update/: README.md  device.optional_depth_presets_update.cpp
examples/advanced/playback/: README.md
examples/advanced/post_processing/: README.md  post_processing.cpp
examples/advanced/preset/: README.md  preset.cpp
examples/advanced/record/: README.md
examples/advanced/record_nogui/: README.md
examples/advanced/save_to_disk/: README.md  save_to_disk.cpp
examples/advanced/sync_align/: README.md
examples/advanced/wrapper_opencv/imshow/: README.md
examples/advanced/wrapper_pcl/: README.md
examples/advanced/wrapper_pcl/pcl/: README.md
examples/application/3d_measurement/: 3d_measurement.cpp  CMakeLists.txt  README.md
examples/application/depth_pcl/: README.md
examples/application/depth_pcl/pcl/: README.md
examples/application/depth_pcl/pcl_color/: README.md
examples/application/rgbd_open3d/: README.md
examples/beginner/01_quick_start/: README.md  quick_start.cpp
examples/beginner/02_depth_viewer/: README.md
examples/beginner/03_color_viewer/: README.md
examples/beginner/04_enumerate/: README.md
examples/beginner/05_point_cloud/: README.md
examples/beginner/06_multi_streams/: README.md
examples/beginner/07_imu/: README.md
examples/beginner/08_infrared/: README.md
examples/beginner/09_firmware_update/: README.md
examples/beginner/camera_params/: README.md
examples/beginner/depth_viewer/: CMakeLists.txt  README.md  depth_viewer.cpp
examples/beginner/enumerate_control/: CMakeLists.txt  README.md  enumerate_control.cpp
examples/beginner/hot_plugin/: README.md
examples/beginner/imu/: CMakeLists.txt  README.md  imu.cpp
examples/beginner/quick_start/: CMakeLists.txt  README.md  quick_start.cpp
examples/beginner/record_playback/: CMakeLists.txt  README.md  record_playback.cpp
examples/beginner/rgbd_viewer/: CMakeLists.txt  README.md  rgbd_viewer.cpp
examples/c_examples/0.c_quick_start/: readme.md
examples/c_examples/1.c_enumerate/: README.md
examples/c_examples/2.c_depth/: README.md  depth.c
examples/lidar_examples/0.c_lidar_quick_start/: README.md  lidar_quick_start.c
examples/lidar_examples/0.lidar_quick_start/: README.md
examples/lidar_examples/1.c_lidar_stream/: README.md
examples/lidar_examples/1.lidar_stream/: README.md
examples/lidar_examples/2.lidar_device_control/: README.md  lidar_device_control.cpp
examples/lidar_examples/3.lidar_record/: README.md
examples/lidar_examples/4.lidar_playback/: README.md  lidar_playback.cpp
examples/publish_files/: CMakeLists.txt
examples/utils/: CMakeLists.txt  utils.cpp  utils.hpp  utils_c.c  utils_c.h  utils_console.cpp  utils_opencv.cpp  utils_opencv.hpp
tests/: CMakeLists.txt  test_common.hpp
tests/core_nohw_test/: CMakeLists.txt  core_nohw_test.cpp  full_feature_matrix_test.cpp
tests/examples_tests/: CMakeLists.txt  TEST_PLAN.md  examples_test_utils.py  generate_ci_matrix.py  generate_examples_manifest.py  merge_example_results.py  run_examples_suite.py
tests/examples_tests/config/: example_overrides.json  runner_pools.json
tests/hardware/: CMakeLists.txt  hardware_p0_test.cpp  test_p0_hardware_smoke.py
tests/hw_full_test/: CMakeLists.txt  hw_destructive_test_main.cpp  hw_full_test.cpp  hw_full_test_main.cpp  hw_test_main_common.hpp
tests/nohw_full_test/: CMakeLists.txt  nohw_full_test.cpp  nohw_full_test_doc.md
tests/perf_test/: CMakeLists.txt  README.md  perf_test.cpp  perf_test_main.cpp  thread_safety_test.cpp
tests/playback_test/: CMakeLists.txt  playback_smoke_test.cpp
tests/rosbag/: Orbbec Gemini 335_CP1S34D00043_20260320173045.bag
tests/scenario_test/: CMakeLists.txt  README.md  log_completeness_test.cpp  scenario_test_main.cpp
tests/testcase/: README.md  TC_CPP_01_context.md  TC_CPP_02_discovery.md  TC_CPP_03_device_list.md  TC_CPP_04_device_info.md  TC_CPP_05_access_mode.md  TC_CPP_06_sensor.md  TC_CPP_07_stream_profile.md  TC_CPP_08_pipeline.md  TC_CPP_09_config.md  TC_CPP_10_frame.md  TC_CPP_11_frame_metadata.md  TC_CPP_12_frame_factory.md  TC_CPP_13_filter.md  TC_CPP_14_device_property.md  TC_CPP_15_depth_work_mode.md  TC_CPP_16_preset.md  TC_CPP_17_frame_interleave.md  TC_CPP_18_record_playback.md  TC_CPP_19_multi_device_sync.md  TC_CPP_20_coordinate_transform.md  TC_CPP_21_firmware.md  TC_CPP_22_version.md  TC_CPP_23_log.md  TC_CPP_24_error_handling.md  TC_CPP_25_data_structures.md  TESTCASE_COVERAGE_AUDIT.md
tools/firmware_update/: CMakeLists.txt  README.md  firmware_update.cpp
(+280 files in other folders)
